--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "core-js": "^2.4.1",
     "express": "^4.15.3",
     "http": "0.0.0",
+    "medium-editor": "^5.23.3",
     "mongoose": "^4.11.4",
     "multer": "^1.3.0",
+    "ng-quill": "^3.6.0",
+    "ngx-quill": "^2.2.0",
+    "ngx-quill-editor": "^2.2.2",
     "parse-glob": "^3.0.4",
     "path": "^0.12.7",
+    "quill-editor": "0.0.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
