--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-2-dropdown": "^1.0.2",
     "body-parser": "^1.17.2",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
@@ -29,12 +30,14 @@
     "mongoose": "^4.11.4",
     "multer": "^1.3.0",
     "ng-quill": "^3.6.0",
+    "ngx-bootstrap": "^2.0.3",
     "ngx-quill": "^2.2.0",
     "ngx-quill-editor": "^2.2.2",
     "parse-glob": "^3.0.4",
     "path": "^0.12.7",
     "quill-editor": "0.0.1",
     "rxjs": "^5.1.0",
+    "ui-select": "^0.19.8",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
