--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@angular/router": "^4.0.0",
     "angular-2-dropdown": "^1.0.2",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
+    "express-session": "^1.15.6",
     "http": "0.0.0",
     "medium-editor": "^5.23.3",
     "mongoose": "^4.11.4",
