--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ngx-quill": "^2.2.0",
     "ngx-quill-editor": "^2.2.2",
     "parse-glob": "^3.0.4",
+    "passport": "^0.4.0",
     "path": "^0.12.7",
     "quill-editor": "0.0.1",
     "rxjs": "^5.1.0",
