--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "ngx-quill-editor": "^2.2.2",
     "parse-glob": "^3.0.4",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "quill-editor": "0.0.1",
     "rxjs": "^5.1.0",
